--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@supabase/realtime-js": "^2.11.7",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~52.0.42",
+    "expo-document-picker": "~13.0.3",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "guia-iffar": "file:",
@@ -29,7 +31,8 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-file-system": "~18.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
